examples/test/testpolicy3953.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3953
  namespace: namespace264
spec:
  podSelector:
    matchLabels:
      key36: value14
      key14: value11
      key17: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value41
          key21: value28
      podSelector:
        matchLabels:
          key47: value16
